--- a/2014q1q2.html
+++ b/2014q1q2.html
@@ -43,7 +43,7 @@
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
             <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-            <section data-markdown="test.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
+            <section data-markdown="2014q1q2.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
         </div>
     </div>
 
