add google analysis

--- a/a_week_without_wechat_moments/index.html
+++ b/a_week_without_wechat_moments/index.html
@@ -88,6 +88,17 @@
     <script src="http://img0.hx.com/magazine/js/Lottery.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://img0.hx.com/magazine/js/99_main.js" type="text/javascript" charset="utf-8" defer＝'defer'></script>
     <script src="/Public/newjs/view.js" type="text/javascript" charset="utf-8"></script><!--脚本加载 end-->
+    <!--google analysis-->
+    <script type="text/javascript">
+        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+        try {
+            var pageTracker = _gat._getTracker("UA-27089866-5");
+            pageTracker._trackPageview();
+        } catch (err) { }
+    </script>
 </body>
 </html>
 
